-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Linux
-
c2c2efe4b88f02404e63c94136126c41c331cb58
The Screen QML type has both a pixelDensity and logicalPixelDensity property, but the docs don't show anything about the logicalPixelDensity.
How do we suggest updates to doc pages? For example, I see what look like documentation in the comments of this file: https://qt.gitorious.org/qt/qtdeclarative/source/fc76abfa52be058ee97b836c2af59cc22f2ca626:src/quick/items/qquickscreen.cpp
Is that where I suggest patches for the "Screen QML Type" page?
Reading those comments I see that they already contain the info I needed, but the docs on the website lag behind.
- is required for
-
QTBUG-40300 Qt 5.4 Documentation Issues (meta bug)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-40214 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 92618,3 | qdoc: Generate obsolete members page for QML types | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |