src/tools/qdoc/codeparser.cpp
@@ -942,17 +942,6 @@ operator|==
 name|COMMAND_OBSOLETE
 condition|)
 block|{
-if|if
-condition|(
-name|node
-operator|->
-name|status
-argument_list|()
-operator|!=
-name|Node
-operator|::
-name|Compat
-condition|)
 name|node
 operator|->
 name|setStatus
